--- a/index.html
+++ b/index.html
@@ -8,48 +8,47 @@
 </head>
 <body>
     <header>
-        <a href="/">WebStudio</a>
         <nav>
+            <a href="/">WebStudio</a>
             <ul>
                 <li><a href="/">Студия</a></li>
                 <li><a href="/">Портфолио</a></li>
                 <li><a href="/">Контакты</a></li>
             </ul>
         </nav>
-        <a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-        <a href="tel:+380961111111">+380961111111</a></li> 
+        <ul>
+            <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+            <li><a href="tel:+380961111111">+380961111111</a></li>
+        </ul>
     </header>
     <main>
-       <div>
+       <section>
          <h1>ЭФФЕКТИВНЫЕ РЕШЕНИЯ<br>ДЛЯ ВАШЕГО БИЗНЕСА</h1>
          <button type="button">Заказать услугу</button>  
         </div>
         <section>
+            <h2>Особенности</h2>
             <ul>
                 <li>
-                 <p><h3>Внимание к деталям</h3></p>
-                 <p><h4>Идейные соображения, а также<br> начало повседневной работы по<br> формированию позиции.</h4></p>
+                 <h3>Внимание к деталям</h3>
+                 Идейные соображения, а также начало повседневной работы по формированию позиции.
                 </li>
                 <li>
-                 <p><h3>Внимание к деталям</h3></p>
-                 <p><h4>Идейные соображения, а также<br> начало повседневной работы по<br> формированию позиции.</h4></p>
+                 <h3>Пунктуальность</h3>
+                 Задача организации, в особенности же рамки и место обучения кадров влечет за собой.
                 </li>
                 <li>
-                 <p><h3>Пунктуальность</h3></p>
-                 <p><h4>Задача организации, в особенности<br> же рамки и место обучения кадров<br> влечет за собой.</h4></p>
+                 <h3>Планирование</h3>
+                 Равным образом консультация с широким активом в значительной степени обуславливает.
                 </li>
                 <li>
-                 <p><h3>Планирование</h3></p>
-                 <p><h4>Равным образом консультация с<br> широким активом в значительной<br> степени обуславливает.</h4></p>
-                </li>
-                <li>
-                 <p><h3>Современные технологии</h3></p>
-                 <p><h4>Значимость этих проблем настолько<br> очевидна, что реализация плановых<br> заданий.</h4></p>
+                 <h3>Современные технологии</h3>
+                 Значимость этих проблем настолько очевидна, что реализация плановых заданий.
                 </li>
             </ul>
         </section>
         <section>
-         <p><h2>Чем мы занимаемся</h2></p>
+         <h2>Чем мы занимаемся</h2>
          <ul>
             <li>
                <img
@@ -76,7 +75,7 @@
          </ul>
         </section>
         <section>
-            <p><h2>Наша команда</h2></p>
+            <h2>Наша команда</h2>
             <ul>
                 <li>
                     <img src="./images/foto1.jpg"
@@ -84,7 +83,7 @@
                      width="270"
                      height="260"
                     />
-                    <p>Игорь Демьяненко</p>
+                    <h3>Игорь Демьяненко</h3>
                     <p lang="en">Product Designer</p>
                 </li>
                 <li>
@@ -93,7 +92,7 @@
                      width="270"
                      height="260"
                     />
-                    <p>Ольга Репина</p>
+                    <h3>Ольга Репина</h3>
                     <p lang="en">Frontend Developer</p>
                 </li>
                 <li>
@@ -102,7 +101,7 @@
                      width="270"
                      height="260"
                     />
-                    <p>Николай Тарасов</p>
+                    <h3>Николай Тарасов</h3>
                     <p lang="en">Marketing</p>
                 </li>
                 <li>
@@ -111,7 +110,7 @@
                      width="270"
                      height="260"
                     />
-                    <p>Михаил Ермаков</p>
+                    <h3>Михаил Ермаков</h3>
                     <p lang="en">UI Designer</p>
                 </li>
             </ul>
@@ -122,9 +121,9 @@
     <a href="/">WebStudio</a>
     <address>
         <ul>
-            <li>г. Киев, пр-т Леси Украинки, 26</li>
-            <li>info@devstudio.com</li>
-            <li>+380961111111</li> 
+            <li><a href="target"="_blank">г. Киев, пр-т Леси Украинки, 26</a></li>
+            <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+            <li><a href="tel:+380961111111">+380961111111</a></li> 
         </ul>
     </address>
 </footer>
