--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
        <section>
          <h1>ЭФФЕКТИВНЫЕ РЕШЕНИЯ<br>ДЛЯ ВАШЕГО БИЗНЕСА</h1>
          <button type="button">Заказать услугу</button>  
-        </div>
+       </section>
         <section>
             <h2>Особенности</h2>
             <ul>
